--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: highcharter
 Type: Package
-Version: 0.6.0.9000
+Version: 0.6.0-9001
 Title: A Wrapper for the 'Highcharts' Library
 Description: A wrapper for the 'Highcharts' library including
     shortcut functions to plot R objects. 'Highcharts'
@@ -22,7 +22,7 @@ URL: http://jkunst.com/highcharter
 BugReports: https://github.com/jbkunst/highcharter/issues
 Maintainer: Joshua Kunst <jbkunst@gmail.com>
 License: MIT + file LICENSE
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.0
 Roxygen: list(markdown = TRUE)
 Depends:
     R (>= 2.10)
