--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(hc_add_dependency)
 export(hc_add_dependency_fa)
 export(hc_add_event_point)
 export(hc_add_event_series)
+export(hc_add_plotband)
 export(hc_add_series)
 export(hc_add_series_boxplot)
 export(hc_add_series_df)
@@ -91,10 +92,13 @@ export(hc_navigator)
 export(hc_pane)
 export(hc_plotOptions)
 export(hc_rangeSelector)
+export(hc_remove_plotband)
 export(hc_responsive)
 export(hc_rm_series)
 export(hc_scrollbar)
 export(hc_series)
+export(hc_set_data)
+export(hc_set_title)
 export(hc_size)
 export(hc_subtitle)
 export(hc_theme)
@@ -148,6 +152,7 @@ export(highchart)
 export(highchart2)
 export(highchartOutput)
 export(highchartOutput2)
+export(highchartProxy)
 export(highchart_ct)
 export(highcharts_demo)
 export(highchartzero)
