--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(hc_add_dependency_fa)
 export(hc_add_event_point)
 export(hc_add_event_series)
 export(hc_add_plotband)
+export(hc_add_plotline)
 export(hc_add_series)
 export(hc_add_series_boxplot)
 export(hc_add_series_df)
@@ -92,13 +93,18 @@ export(hc_navigator)
 export(hc_pane)
 export(hc_plotOptions)
 export(hc_rangeSelector)
+export(hc_redraw)
 export(hc_remove_plotband)
+export(hc_remove_plotline)
 export(hc_responsive)
 export(hc_rm_series)
 export(hc_scrollbar)
 export(hc_series)
 export(hc_set_data)
+export(hc_set_data_map)
+export(hc_set_extremes)
 export(hc_set_title)
+export(hc_set_visible)
 export(hc_size)
 export(hc_subtitle)
 export(hc_theme)
