--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(hc_scrollbar)
 export(hc_series)
 export(hc_set_data)
 export(hc_set_data_map)
+export(hc_set_data_serie)
 export(hc_set_extremes)
 export(hc_set_title)
 export(hc_set_visible)
