--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ export(hc_theme_tufte)
 export(hc_theme_tufte2)
 export(hc_title)
 export(hc_tooltip)
+export(hc_update_axis)
 export(hc_xAxis)
 export(hc_yAxis)
 export(hc_yAxis_multiples)
