add proxy example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,8 @@ export(hc_add_dependency)
 export(hc_add_dependency_fa)
 export(hc_add_event_point)
 export(hc_add_event_series)
+export(hc_add_plotband)
+export(hc_add_plotline)
 export(hc_add_series)
 export(hc_add_series_list)
 export(hc_add_series_map)
@@ -76,10 +78,19 @@ export(hc_navigator)
 export(hc_pane)
 export(hc_plotOptions)
 export(hc_rangeSelector)
+export(hc_redraw)
+export(hc_remove_plotband)
+export(hc_remove_plotline)
 export(hc_responsive)
 export(hc_rm_series)
 export(hc_scrollbar)
 export(hc_series)
+export(hc_set_data)
+export(hc_set_data_map)
+export(hc_set_data_serie)
+export(hc_set_extremes)
+export(hc_set_title)
+export(hc_set_visible)
 export(hc_size)
 export(hc_subtitle)
 export(hc_theme)
@@ -110,6 +121,7 @@ export(hc_theme_tufte)
 export(hc_theme_tufte2)
 export(hc_title)
 export(hc_tooltip)
+export(hc_update_axis)
 export(hc_xAxis)
 export(hc_yAxis)
 export(hc_yAxis_multiples)
@@ -130,6 +142,7 @@ export(highchart)
 export(highchart2)
 export(highchartOutput)
 export(highchartOutput2)
+export(highchartProxy)
 export(highcharts_demo)
 export(highchartzero)
 export(hw_grid)
